# AHS-EW-SAR-dashboard

./: .gitignore  Elixir.TCPServer.beam  README.md  data.json  enterid.html  index.html  main.py  mix.exs  page.html  pyproject.toml  server.ex  socket_server.py  test.html  test.py  viewgrid.html  viewlog.html  viewplot.html  web_dashboard.py  web_grid.py  web_server.py
lib/: data_store.ex  helpers.ex  http_server.ex  tcp_server.ex  web_dashboard.ex  web_utils.ex
v1/: pyproject.toml  socket_server.py  socket_test.py  test.py  viewlog.html  web_dashboard.py
web_dashboard/: .iex.exs  web_dashboard.py
web_dashboard/lib/: helpers.ex  web_utils.ex
