[tool.poetry]
name = "pico-car-grid"
version = "0.1.0"
description = ""
authors = ["blobbybilb <blobbybilb@skiff.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sanic = "^23.12.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
